--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -50,8 +50,7 @@
             ></div>
           </div>
 
-          <div class="view-controls">
-          </div>
+          <div class="view-controls"></div>
         </div>
       </nav>
 
@@ -114,7 +113,6 @@
               </div>
             </div>
           </div>
-
         </aside>
 
         <!-- Graph Visualization -->
@@ -138,7 +136,6 @@
               </button>
             </div>
 
-
             <div class="control-group">
               <button
                 id="screenshotBtn"
@@ -152,7 +149,6 @@
               </button>
             </div>
           </div>
-
 
           <!-- Loading State -->
           <div id="graphLoading" class="graph-loading">
