Shell: minor ui fixes

--- a/ts/packages/shell/src/renderer/assets/styles.less
+++ b/ts/packages/shell/src/renderer/assets/styles.less
@@ -310,6 +310,7 @@ body {
 .chat-message-content {
   padding: 6px 15px 6px 15px;
   word-wrap: break-word;
+  overflow-x: auto;
 }
 
 .chat-message-kind-status {
