view entity facets

--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -87,9 +87,9 @@
 
             <div class="entity-details">
               <h3>Details</h3>
-              <div id="entityAliases" class="detail-section">
-                <strong>Aliases:</strong>
-                <div class="aliases-list"></div>
+              <div id="entityFacets" class="detail-section">
+                <strong>Facets:</strong>
+                <div class="facets-list"></div>
               </div>
               <div id="entityDomains" class="detail-section">
                 <strong>Domains:</strong>
