Enable search on entity view page

--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -38,7 +38,7 @@
                 type="text"
                 id="entitySearchInput"
                 class="entity-search-input"
-                placeholder="Search entities..."
+                placeholder="Enter entity name..."
               />
               <button id="entitySearchButton" class="entity-search-btn">
                 <i class="bi bi-search"></i>
