fix the modal popup for importing web activity data

--- a/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
@@ -36,13 +36,13 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              <i class="bi bi-download"></i>
+              <i class="bi bi-upload"></i>
             </button>
             <ul class="dropdown-menu">
               <li>
                 <a class="dropdown-item" href="#" id="importWebActivityBtn">
-                  <i class="bi bi-download me-2"></i>
-                  Import Web Activity
+                  <i class="bi bi-bookmarks me-2"></i>
+                  Import Bookmarks or History
                 </a>
               </li>
               <li>
@@ -92,7 +92,7 @@
             </h1>
             <p class="page-subtitle">
               Ask in natural language: "latest github bookmarks", "car reviews
-              last week", "most visited news sites"
+              last week"
             </p>
           </div>
 
