--- a/ts/packages/agents/browser/src/extension/views/macrosLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/macrosLibrary.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Macro Library - TypeAgent</title>
+    <title>Macros Library - TypeAgent</title>
     <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="../vendor/prism/prism.css" />
     <link
