--- a/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
@@ -5,7 +5,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>TypeAgent Web Activity Library</title>
+    <title>Knowledge Library</title>
     <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
@@ -19,7 +19,7 @@
       <div class="nav-container">
         <div class="nav-brand">
           <i class="bi bi-collection"></i>
-          <span>Web Activity Library</span>
+          <span>Knowledge Library</span>
         </div>
         <div class="nav-actions">
           <div class="connection-status" id="connectionStatus">
