--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -8,8 +8,8 @@
     <title>Entity Graph - TypeAgent Browser</title>
     <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
     />
     <script src="../vendor/cytoscape/cytoscape.min.js"></script>
     <script src="../vendor/dagre/dagre.min.js"></script>
