--- a/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
@@ -8,8 +8,8 @@
     <title>Knowledge Library</title>
     <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="knowledgeLibrary.css" />
   </head>
