--- a/ts/packages/shell/src/renderer/assets/settingsStyles.less
+++ b/ts/packages/shell/src/renderer/assets/settingsStyles.less
@@ -20,10 +20,15 @@
 
 .shadeContainer {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 0; /* Don't take up space */
   display: flex;
   flex-direction: row;
   background: transparent;
+  z-index: 2000; /* Above other content */
+  pointer-events: none; /* Don't block interactions */
 }
 
 .shade {
@@ -41,6 +46,7 @@
 
   height: 8px;
   animation: retract 0.1s ease-out 0s forwards;
+  pointer-events: auto; /* Enable clicks on tabs */
 }
 
 .shade .shadeIcon {
