Update icons used for entities topics and relationships

--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -60,7 +60,7 @@
         <aside class="entity-sidebar" id="entitySidebar">
           <div class="entity-header">
             <div class="entity-icon" id="entityIcon">
-              <i class="bi bi-diagram-2"></i>
+              <i class="bi bi-tags"></i>
             </div>
             <div class="entity-info">
               <h1 class="entity-name" id="entityName">Select an Entity</h1>
