--- a/ts/packages/shell/src/renderer/assets/searchMenuCommon.less
+++ b/ts/packages/shell/src/renderer/assets/searchMenuCommon.less
@@ -12,6 +12,7 @@
   overflow: hidden;
   outline: 2px solid cornflowerblue;
   background-color: white;
+  width: max-content;
 }
 
 .autocomplete-container .search-input {
