--- a/ts/packages/shell/src/renderer/assets/styles.less
+++ b/ts/packages/shell/src/renderer/assets/styles.less
@@ -195,6 +195,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
   bottom: 0px;
   position: absolute;
   background-color: @chat-bg;
