--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -30,6 +30,15 @@
             <i class="bi bi-chevron-right breadcrumb-separator"></i>
             <span class="breadcrumb-current">Entity Graph</span>
             <span id="entityNameBreadcrumb" class="breadcrumb-entity"></span>
+            <button
+              id="backToGlobalBtn"
+              class="back-to-global-btn"
+              style="display: none"
+              title="Back to Global View"
+            >
+              <i class="bi bi-arrow-left"></i>
+              Global
+            </button>
           </div>
 
           <div class="entity-search">
