Add button to re-run layout for a view

--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -128,8 +128,8 @@
               <button id="fitBtn" class="control-btn" title="Fit to View">
                 <i class="bi bi-arrows-angle-contract"></i>
               </button>
-              <button id="centerBtn" class="control-btn" title="Center Graph">
-                <i class="bi bi-bullseye"></i>
+              <button id="reLayoutBtn" class="control-btn" title="Re-run Layout">
+                <i class="bi bi-arrow-repeat"></i>
               </button>
             </div>
 
