--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -128,7 +128,11 @@
               <button id="fitBtn" class="control-btn" title="Fit to View">
                 <i class="bi bi-arrows-angle-contract"></i>
               </button>
-              <button id="reLayoutBtn" class="control-btn" title="Re-run Layout">
+              <button
+                id="reLayoutBtn"
+                class="control-btn"
+                title="Re-run Layout"
+              >
                 <i class="bi bi-arrow-repeat"></i>
               </button>
             </div>
