--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -92,10 +92,6 @@
                 <strong>Facets:</strong>
                 <div class="facets-list"></div>
               </div>
-              <div id="entityDomains" class="detail-section">
-                <strong>Domains:</strong>
-                <div class="domains-list"></div>
-              </div>
               <div id="entityTopics" class="detail-section">
                 <strong>Topics:</strong>
                 <div class="topics-list"></div>
@@ -132,8 +128,12 @@
               <button id="fitBtn" class="control-btn" title="Fit to View">
                 <i class="bi bi-arrows-angle-contract"></i>
               </button>
-              <button id="centerBtn" class="control-btn" title="Center Graph">
-                <i class="bi bi-bullseye"></i>
+              <button
+                id="reLayoutBtn"
+                class="control-btn"
+                title="Re-run Layout"
+              >
+                <i class="bi bi-arrow-repeat"></i>
               </button>
             </div>
 
