fixed merge issue, integrated read/write modes for chat input

--- a/ts/packages/shell/src/renderer/assets/searchMenuCommon.less
+++ b/ts/packages/shell/src/renderer/assets/searchMenuCommon.less
@@ -11,7 +11,7 @@
   z-index: 100;
   overflow: hidden;
   outline: 2px solid cornflowerblue;
-  background-color: white;
+  background-color: #FFFFFF88;
   width: max-content;
 }
 
