--- a/ts/packages/shell/src/renderer/assets/searchMenuView.less
+++ b/ts/packages/shell/src/renderer/assets/searchMenuView.less
@@ -4,7 +4,7 @@
 @import "./searchMenuCommon.less";
 
 body {
-  background-color: transparent;
+  background-color: #00000000;
   font-size: 14px;
   line-height: 1.5;
   overflow: hidden;
