--- a/ts/packages/shell/src/renderer/assets/styles.less
+++ b/ts/packages/shell/src/renderer/assets/styles.less
@@ -248,8 +248,16 @@ body {
   display: none;
 }
 
-.write-only .chat-input {
-  max-height: 45px;
+.write-only {
+
+  .chat-input {
+    max-height: 45px;
+  }
+
+  .chat{
+    display: none;
+  }
+
 }
 
 .chat-input {
