Relative positions of anchor nodes

--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -135,6 +135,13 @@
               >
                 <i class="bi bi-arrow-repeat"></i>
               </button>
+              <button
+                id="debugViewportBtn"
+                class="control-btn"
+                title="Debug: Log Viewport Nodes"
+              >
+                <i class="bi bi-bug"></i>
+              </button>
             </div>
 
             <div class="control-group">
