add playlist list and get by index; change formatting of playlist html

--- a/ts/packages/shell/src/renderer/assets/styles.less
+++ b/ts/packages/shell/src/renderer/assets/styles.less
@@ -222,6 +222,17 @@ body {
   padding-right: 8px;
 }
 
+.playlist-list {
+  max-height: 300px;
+  overflow-y: auto;
+  border-radius: 8px;
+  padding-right: 8px;
+}
+
+.playlist-title {
+  color: purple;
+}
+
 .track-artist {
   color: black;
 }
