added title to chat view

--- a/ts/packages/shell/src/renderer/assets/styles.less
+++ b/ts/packages/shell/src/renderer/assets/styles.less
@@ -601,6 +601,15 @@ table.table-message td {
   vertical-align: bottom;
 }
 
+.chat-title {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  font-size: 8px;
+  user-select: none;
+  opacity: 0.5;
+}
+
 @keyframes message {
   0% {
   }
