--- a/ts/packages/agents/browser/src/extension/views/topicGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/topicGraphView.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<!-- Copyright (c) Microsoft Corporation.
+ Licensed under the MIT License. -->
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
